# harpy_vitessce

./: .gitignore  README.md  __init__.py  agents.md  create_globus_utilities_env.sh  pyproject.toml
.codex/: config.toml
.github/workflows/: docs.yml
docs/: BUILD_DOCS.md  Makefile  conf.py  index.md  make.bat  quickstart.md  requirements.txt
docs/tutorials/: index.md  macsima.md
docs/tutorials/proteomics/: spatialdata_blobs.ipynb
docs/tutorials/visium_hd/: visium_hd.ipynb  visium_hd_bins_from_spatialdata.ipynb  visium_hd_spatialdata.ipynb  visium_hd_spots.ipynb
scripts/benchmark_scripts/: bmk.sh  bmk_plant.sh  convert_zarr_3_zarr_2.py  create_vitessce_config.py  create_vitessce_config_s3.py  curio.sh  nova_st.sh  nova_st_plant.sh  stereoseq.sh  stereoseq_plant.sh  visium.sh  visium_hd.sh  visium_hd_plant.sh
src/harpy_vitessce/: __init__.py
src/harpy_vitessce/data_utils/: __init__.py  _adata.py  _ome.py  _visium_hd.py
src/harpy_vitessce/visium_hd/: __init__.py  _vitessce.py
src/harpy_vitessce/vitessce_config/: __init__.py  _constants.py  _image.py  _observations.py  _proteomics.py  _seqbased_transcriptomics.py  _utils.py  _visium_hd.py  imagebased_transcriptomics.py  imgbased_transcriptomics.py
