[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harpy-vitessce"
version = "0.1.0"
description = "Utilities for working with Harpy and Vitessce data."
requires-python = ">=3.10"
dependencies = [
    "spatialdata",
    "setuptools<82",
    "harpy-analysis",
    "loguru",
    "lazy-loader>=0.4",
]

[project.optional-dependencies]
vitessce = ["vitessce[all]>=3.8.0"]
docs = [
    "sphinx>=4.5",
    "sphinx-book-theme>=1.0.0",
    "sphinx_rtd_theme",
    "myst-nb",
    "ipython",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinx-design",
    "sphinx-copybutton",
]
#pip install -e ".[vitessce]"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
